# SOEM

./: CMakeLists.txt
test/linux/Simple_Test_Torque/: CMakeLists.txt  Control_Init.m  control.c  control.h  controller.slx  simple_test_torque.c
test/linux/Simple_Test_Torque/Control_grt_rtw/: Control.c  Control.h  Control_data.c  Control_private.h  Control_types.h  builtin_typeid_types.h  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h
